# clientele

./: .coverage  .gitignore  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  HOMEBREW_PUBLISHING.md  HOMEBREW_QUICKSTART.md  HOMEBREW_SETUP.md  LICENSE  Makefile  PLAN.md  PUBLISHING.md  README.md  SECURITY.md  TEST_EVALUATION_REPORT.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_openapi_directory.py
.github/: compatibility.json  pull_request_template.md
.github/workflows/: ci.yml  lint.yml  test-openapi-directory.yml
CHANGELOG/: index.html
api-async/: index.html
api-authentication/: index.html
api-cache/: index.html
api-configuration/: index.html
api-direct-requests/: index.html
api-examples/: index.html
api-exceptions/: index.html
api-graphql/: index.html
api-http-backends/: index.html
api-logging/: index.html
api-overview/: index.html
api-retries/: index.html
api-stream/: index.html
api-testing/: index.html
authentication/: index.html
clientele/: __init__.py  cli.py  generator.py  mypy.py  schemas.py  settings.py  testing.py  utils.py  writer.py
clientele/api/: __init__.py  client.py  config.py  exceptions.py  http_status.py  request_context.py  requests.py  type_utils.py
clientele/cache/: __init__.py  backends.py  decorator.py  key_generator.py  types.py
clientele/client_template/: client.py  http.py  schemas.py
clientele/explore/: __init__.py  commands.py  completer.py  executor.py  formatter.py  introspector.py  repl.py  session.py
clientele/framework/: __init__.py  client.py  config.py  endpoint.py  exceptions.py  http_status.py  routes.py
clientele/generators/: README.md  __init__.py  base.py  base_clients.py  base_http.py  cicerone_compat.py  clients.py  http.py  schema_utils.py  schemas.py  validation.py
clientele/graphql/: __init__.py  client.py
clientele/http/: __init__.py  aiohttp_backend.py  backends.py  fake_backend.py  httpx.py  httpx_backend.py  niquests_backend.py  requests_backend.py  response.py  status_codes.py
clientele/retries/: __init__.py  decorators.py
clientele/templates/: async_methods.jinja2  bearer_client.jinja2  client_py.jinja2  http_py.jinja2  post_method.jinja2
compatibility/: index.html
complex_schemas/: index.html
configuration/: index.html
design/: index.html
docs/: CHANGELOG.md  CNAME  api-async.md  api-authentication.md  api-cache.md  api-configuration.md  api-direct-request.md  api-direct-requests.md  api-examples.md  api-exceptions.md  api-graphql.md  api-http-backends.md  api-logging.md  api-overview.md  api-retries.md  api-stream.md  api-testing.md  authentication.md  compatibility.md  complex_schemas.md  configuration.md  design.md  examples.md  exceptions.md  explore.md  framework-async.md  framework-authentication.md  framework-configuration.md  framework-decorator-client.md  framework-django-ninja.md  framework-drf.md  framework-fastapi.md  framework-overview.md  index.md  injected-parameters.md  install.md  mypy.md  openapi-authentication.md  openapi-cli.md  openapi-configuration.md  (+8 more)
example_openapi_specs/: additional_properties.json  best.json  complex_schemas.json  enums.json  issue_248.json  simple.json  test_303.yaml  twilio.json
examples/: index.html
exceptions/: index.html
explore/: index.html
framework-django-ninja/: index.html
framework-drf/: index.html
framework-fastapi/: index.html
homebrew/: FIX_SUMMARY.md  HOMEBREW_QUICKSTART.md  HOMEBREW_SETUP.md  README.md  check_status.sh  clientele.rb.template  generate_formula.py
injected-parameters/: index.html
install/: index.html
mypy/: index.html
openapi-authentication/: index.html
openapi-cli/: index.html
openapi-configuration/: index.html
openapi-regeneration/: index.html
references/: index.html
regeneration/: index.html
scripts/: regenerate_examples.py
search/: search_index.json
server-django-ninja/: index.html
server-drf/: index.html
server-fastapi/: index.html
server_examples/: README.md
server_examples/django-ninja/: README.md  api.py
server_examples/django_ninja/: README.md  openapi.json
server_examples/django_rest_framework/: README.md  openapi.yaml
server_examples/fastapi/: README.md  main.py  openapi.json
src/: cli.py  constants_template.py  generator.py  settings.py  utils.py  writer.py
src/client_template/: MANIFEST.md  http.py  schemas.py
src/generators/: clients.py  http.py  schemas.py
src/template/: MANIFEST  client.py  http.py  responses.py  schemas.py
src/templates/: async_methods.jinja  basic_client.jinja2  bearer_client.jinja2  client.jinja2  get_method.jinja2  post_method.jinja2  schema_class.jinja2  schema_helpers.jinja2  sync_methods.jinja2
test_output/: client.py
testing/: index.html
tests/: test_additional_coverage.py  test_additional_properties.py  test_async_generated_class_client.py  test_async_generated_client.py  test_auth_generation.py  test_cli.py  test_cli_coverage.py  test_cli_full_coverage.py  test_complex_schemas.py  test_deprecated_operations.py  test_dynamic_config.py  test_edge_case_coverage.py  test_endpoint.py  test_enum_generation.py  test_fixture_schemas.py  test_framework_client.py  test_framework_client_singleton.py  test_framework_integration_singleton.py  test_framework_typeddict.py  test_generated_class_client.py  test_generated_client.py  test_generator_coverage.py  test_httpx_config.py  test_issue_248.py  test_nullable_fields.py  test_openapi_31_null_type.py  test_operation_descriptions.py  test_ref_handling.py  test_remaining_coverage.py  test_settings.py  test_spacetraders_generation.py  test_testing.py  test_testing_utilities.py  test_utils.py  test_validate_command.py
tests/api/: test_api_client.py  test_api_client_logging.py  test_api_client_singleton.py  test_api_integration_singleton.py  test_api_response_parser.py  test_api_typed_dict.py  test_config_override.py  test_direct_request.py  test_direct_requests.py  test_request_context.py  test_requests.py  test_stream.py  test_stream_httpx.py  test_type_utils.py
usage/: index.html
(+238 files in other folders)
