[project]
name = "clientele"
version = "1.0.0"
description = "The Python API Client Generator for FastAPI, Django REST Framework, and Django Ninja"
authors = [{ name = "Paul Hallett", email = "paulandrewhallett@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "cicerone==0.3.0",
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20250915",
    "jinja2>=3.1.6",
    "ruff>=0.14.10",
    "prompt_toolkit>=3.0.0,<4.0.0",
    "cli-helpers>=2.4.0",
]

[project.urls]
Homepage = "https://phalt.github.io/clientele/"
Changelog = "https://phalt.github.io/clientele/CHANGELOG/"
Documentation = "https://phalt.github.io/clientele/"
Issues = "https://github.com/phalt/clientele/issues"

[project.scripts]
clientele = "clientele.cli:cli_group"

[dependency-groups]
dev = [
    "fastapi[standard]>=0.127.0",
    "ty",
    "mkdocs>=1.6.1",
    "ipython>=8.37.0",
    "mkdocs-material>=9.6.22",
    "respx>=0.22.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-httpserver>=1.1.3",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "django>=4.2",
    "djangorestframework>=3.14.0",
    "drf-spectacular>=0.26.0",
    "django-ninja>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clientele"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]

[tool.coverage.run]
omit = [
    "*/templates/*.jinja2",
    "clientele/generators/*/templates/*.jinja2",
    "server_examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
