[project]
name = "clientele"
version = "2.0.0"
description = "Clientele is a different way to build Python API Clients"
authors = [{ name = "Paul Hallett", email = "paulandrewhallett@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx2>=2.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "stamina>=25.2.0",
]

[project.optional-dependencies]
core = []
cli = [
    "click>=8.3.1",
    "rich>=14.2.0",
    "cicerone==0.3.0",
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20250915",
    "jinja2>=3.1.6",
    "ruff>=0.15.5",
]

[project.urls]
Homepage = "https://clientele.dev"
Changelog = "https://docs.clientele.dev/CHANGELOG/"
Documentation = "https://docs.clientele.dev/"
Issues = "https://github.com/phalt/clientele/issues"

[project.scripts]
clientele = "clientele.cli:cli_group"

[project.entry-points.mypy]
clientele = "clientele.mypy"

[dependency-groups]
dev = [
    "clientele[cli]",
    "fastapi[standard]>=0.127.0",
    "ty>=0.0.38",
    "mkdocs>=1.6.1",
    "ipython>=8.37.0",
    "mkdocs-material>=9.7.6",
    "pytest-httpx2>=1.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
    "pytest-httpserver>=1.1.3",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "django>=4.2",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.26.0",
    "django-ninja>=1.0.0",
    "mypy>=1.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clientele"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]

[tool.coverage.run]
omit = [
    "*/templates/*.jinja2",
    "clientele/generators/*/templates/*.jinja2",
    "server_examples/*",
    "clientele/mypy.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-p pytest_httpx2"]

[tool.ty.src]
# Exclude the mypy-specific test directory (intentional type errors for mypy plugin
# verification) and server_examples (Django ORM patterns ty cannot resolve).
exclude = ["tests/mypy", "server_examples"]
